--- a/.github/workflows/ci-atlas.yaml
+++ b/.github/workflows/ci-atlas.yaml
@@ -1,53 +1,33 @@
-name: Atlas
+name: Atlas Push Migrations
 on:
   push:
-    branches:
-      - main
-    paths:
-      - .github/workflows/ci-atlas.yaml
-      - 'db/migrations/*'
+    branches: [ master ]
   pull_request:
-    paths:
-      - 'db/migrations/*'
-# Permissions to write comments on the pull request.
-permissions:
-  contents: read
-  pull-requests: write
+    branches: [ master ]
+
 jobs:
-  atlas:
+  push:
     services:
-      # Spin up a mysql:8 container to be used as the dev-database for analysis.
-      mysql:
-        image: mysql:8
+      postgres15:
+        image: postgres:15
         env:
-          MYSQL_DATABASE: dev
-          MYSQL_ROOT_PASSWORD: pass
+          POSTGRES_DB: test
+          POSTGRES_PASSWORD: pass
         ports:
-          - 3306:3306
+          - 5432:5432
         options: >-
-          --health-cmd "mysqladmin ping -ppass"
+          --health-cmd pg_isready
           --health-interval 10s
-          --health-start-period 10s
           --health-timeout 5s
-          --health-retries 10
+          --health-retries 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - uses: ariga/setup-atlas@v0
         with:
-          cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN_GJDZ61 }}
-      - uses: ariga/atlas-action/migrate/lint@v1
+          cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
+      - uses: ariga/atlas-action/migrate/push@v1
         with:
           dir: 'file://db/migrations'
-          dir-name: 'app'
-          dev-url: 'mysql://root:pass@localhost:3306/dev'
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - uses: ariga/atlas-action/migrate/push@v1
-        if: github.ref == 'refs/heads/master'
-        with:
-            dir: 'file://db/migrations'
-            dir-name: 'app'
-            dev-url: 'mysql://root:pass@localhost:3306/dev'
+          dir-name: 'melody-test'
+          dev-url: postgres://postgres:pass@localhost:5432/test?sslmode=disable
