--- a/.github/workflows/ci-atlas.yaml
+++ b/.github/workflows/ci-atlas.yaml
@@ -1,9 +1,10 @@
 name: Atlas Push Migrations
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    types:
+      - ready_for_review
 
 jobs:
   push:
