--- a/.github/workflows/atlas.yaml
+++ b/.github/workflows/atlas.yaml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
     paths:
-      - 'db/migrations-atlas/*'
+      - 'db/migrations/*'
 # Permissions to write comments on the pull request.
 permissions:
   contents: read
@@ -34,7 +34,7 @@ jobs:
           fetch-depth: 0
       - uses: ariga/atlas-action@v0
         with:
-          dir: 'db/migrations-atlas'
+          dir: 'db/migrations'
           dir-format: 'golang-migrate'
           dev-url: "postgres://postgres:pass@localhost:5432/dev?sslmode=disable"
           cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ariga/atlas-sync-action@v0
         with:
-          dir: 'db/migrations-atlas'
+          dir: 'db/migrations'
           dev-url: "postgres://postgres:pass@postgres:5432/dev?sslmode=disable"
           cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
           name: 'melody-test'
