--- a/.github/workflows/ci-atlas.yaml
+++ b/.github/workflows/ci-atlas.yaml
@@ -29,6 +29,6 @@ jobs:
           cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
       - uses: ariga/atlas-action/migrate/push@v1
         with:
-          dir: 'file://db/migrations-atlas'
+          dir: 'file://db/migrations'
           dir-name: 'melody-test'
           dev-url: postgres://postgres:pass@localhost:5432/test?sslmode=disable
