fix: fix workflow setup

--- a/.github/workflows/atlas.yaml
+++ b/.github/workflows/atlas.yaml
@@ -35,10 +35,9 @@ jobs:
       - uses: ariga/atlas-action@v0
         with:
           dir: 'db/migrations'
-          dir-format: 'golang-migrate'
           dev-url: "postgres://postgres:pass@localhost:5432/dev?sslmode=disable"
           cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
-          name: 'melody-test'
+          dir-name: 'melody-test'
   sync:
     needs: lint
     if: github.ref == 'refs/heads/main'
@@ -63,4 +62,4 @@ jobs:
           dir: 'db/migrations'
           dev-url: "postgres://postgres:pass@postgres:5432/dev?sslmode=disable"
           cloud-token: ${{ secrets.ATLAS_CLOUD_TOKEN }}
-          name: 'melody-test'
+          dir-name: 'melody-test'
